loro/test/valid/indep/misc/asig.loro
///////////////////////////////////////////////////////////////
algoritmo para PRUEBA()
estrategia""
inicio
	e: real := leerEntero();
	escribirln("e = " +e);
fin algoritmo