loro/test/invalid/clase_instancia_de_clase.loro
/////////////////////////////////////////////////////////////////
algoritmo para PRUEBA()
	descripcion ""
inicio
	si Objeto es_instancia_de Objeto entonces
		escribirln("ERROR INTERNO!");
	fin si;
fin algoritmo